--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 ---
-<a ref="https://github.com/deelew/deelew.github.io/blob/master/finalize-phantomReference.html">谈谈Java的finalize与PhantomReference</a>
+<a href="https://github.com/deelew/deelew.github.io/blob/master/finalize-phantomReference.html">谈谈Java的finalize与PhantomReference</a>
