--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<a href="https://github.com/deelew/deelew.github.io/blob/master/finalize-phantomReference.html">谈谈Java的finalize与PhantomReference</a>
+<a href="finalize-phantomReference.html">谈谈Java的finalize与PhantomReference</a>
