--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<a href="finalize-phantomReference.html">谈谈Java的finalize与PhantomReference</a>
+<a href="finalize-phantomReference.md">谈谈Java的finalize与PhantomReference</a>
